# llm-leaderboard-korean

./: .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  .pypirc  CLAUDE.md  CODEOWNERS  DEPLOYMENT_GUIDE.md  DOCKER.md  Dockerfile  MANIFEST.in  PYPI_CHECKLIST.md  README.md  README_en.md  README_ko.md  artifact.ipynb  blend_runs.py  docker-compose.yml  eval_tasks.py  experiment.py  horangi.py  main.py  o4-mini.nejumi_1761309288.json  pyproject.toml  requirements-docker.txt  requirements.txt  run.py  run_eval.py  run_examples.sh  setup.py  test.ipynb  tmp.ipynb
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check_tests.yml
.openhands/: TASKS.md
chat_templates/42dot/: 42dot_LLM-SFT-1-3B.jinja
chat_templates/JinValentine/: Jonathan-aLLM-Meta-Llama-3-8B-Instruct-Korean-v1.0.jinja
chat_templates/LGAI-EXAONE/: EXAONE-4.0-32B.jinja  EXAONE-4.0-32B_original.jinja  _EXAONE-3.0-7.8B-Instruct.jinja
chat_templates/nlpai-lab/: KULLM3.jinja
chat_templates/upstage/: solar-mini-250123.jinja
configs/: DeepSeek-R1.yaml  DeepSeek-V3.1.yaml  DeepSeek-V3.yaml  EXAONE-4.0-1.2B.yaml  EXAONE-4.0-32B.yaml  EXAONE-4.0.1-32B.yaml  Kimi-K2-Instruct-0905.yaml  Kimi-K2-Thinking.yaml  Qwen3-0.6B.yaml  Qwen3-1.7B.yaml  Qwen3-14B.yaml  Qwen3-4B-Instruct-2507.yaml  Qwen3-4B.yaml  Qwen3-8B.yaml  README.md  base_config.yaml  claude-haiku-4-5-20251001.yaml  claude-haiku-4-5-20251001_high-effort.yaml  claude-haiku-4-5-20251001_low-effort.yaml  claude-haiku-4.5.yaml  claude-opus-4-1-20250805.yaml  claude-opus-4-1-20250805_high-effort.yaml  claude-opus-4-1-20250805_low-effort.yaml  claude-opus-4-20250514.yaml  claude-opus-4-20250514_high-effort.yaml  claude-opus-4-20250514_low-effort.yaml  claude-sonnet-4-5-20250929.yaml  claude-sonnet-4-5-20250929_high-effort.yaml  claude-sonnet-4-5-20250929_low-effort.yaml  claude_experiment.yaml  config-42dot_LLM-PLM-1-3B.yaml  config-42dot_LLM-SFT-1-3B.yaml  config-DataVortexS-10-7B-dpo-v1-11.yaml  config-EEVE-Korean-Instruct-10-8B-v1-0.yaml  config-ESTsoft-EEVE-Korean_Instruct-10-8B-expo.yaml  config-EXAONE-3-0-7-8B-Instruct.yaml  config-EXAONE-3-5-2-4B-Instruct.yaml  config-EXAONE-3-5-32B-Instruct.yaml  config-EXAONE-3-5-7-8B-Instruct.yaml  config-EXAONE-4-0-32B-reasoning.yaml  (+146 more)
configs/models/: A.X-3.1.yaml  A.X-4.0-Light.yaml  A.X-4.0.yaml  A.X-K1.yaml  EXAONE-3.0-7.8B-Instruct.yaml  EXAONE-3.5-2.4B-Instruct.yaml  EXAONE-3.5-32B-Instruct.yaml  EXAONE-3.5-7.8B-Instruct.yaml  EXAONE-4.0-1.2B.yaml  EXAONE-4.0-32B.yaml  EXAONE-4.0.1-32B.yaml  EXAONE-Deep-2.4B.yaml  EXAONE-Deep-32B.yaml  EXAONE-Deep-7.8B.yaml  GLM-4.7-Flash.yaml  HyperCLOVAX-SEED-Think-32B.yaml  LFM-2.5-1.2B-Thinking.yaml  Midm-2.0-Base-Instruct.yaml  Midm-2.0-Mini-Instruct.yaml  Nemotron-3-Nano-30B-A3B.yaml  Qwen3-0.6B.yaml  Qwen3-1.7B.yaml  Qwen3-14B.yaml  Qwen3-30B-A3B-Instruct-2507.yaml  Qwen3-32B.yaml  Qwen3-4B-Instruct-2507.yaml  Qwen3-4B.yaml  Qwen3-8B.yaml  VAETKI.yaml  _template.yaml  _template_api.yaml  _template_vllm.yaml  claude-haiku-4-5-20251001_high-effort.yaml  claude-opus-4-1-20250805_high-effort.yaml  claude-opus-4-20250514_high-effort.yaml  claude-opus-4-5-20251101_high-effort.yaml  claude-opus-4-5-20251101_low-effort.yaml  claude-opus-4-6_high-effort.yaml  claude-sonnet-4-5-20250929_high-effort.yaml  deepseek-v3.2.yaml  (+36 more)
configs/openai/: claude-haiku-4-5-20251001.yaml  gemini-2.5-flash.yaml  gpt-5-mini-2025-08-07.yaml  grok-4-0709.yaml  grok-4-fast-non-reasoning.yaml  grok-4-non-reasoning.yaml  o4-mini-2025-04-16.yaml  qwen-plus-2025-09-11.yaml  qwen-turbo-2025-04-28.yaml  qwen3-max-2025-09-23.yaml  solar-pro2-250710.yaml
configs/vllm_litellm/: README.md  bash_code.txt  google-gemma-3-12b-it.yaml  google-gemma-3-1b-it.yaml  google-gemma-3-270m-it.yaml  google-gemma-3-27b-it.yaml  google-gemma-3-4b-it.yaml  hyperclovax-seed-text-instruct-1.5b.yaml  hyperclovax-seed-think-14b.yaml  k-intelligence-midm-2.0-base-instruct.yaml  k-intelligence-midm-2.0-mini-instruct.yaml  kakaocorp-kanana-1.5-15.7b-a3b-instruct.yaml  kakaocorp-kanana-1.5-2.1b-instruct-2505.yaml  kakaocorp-kanana-1.5-8b-instruct-2505.yaml  kanana-1.5-2.1b-instruct-2505.yaml  kanana-1.5-8b-instruct-2505.yaml  lgai-exaone-exaone-3.0-7.8b-instruct.yaml  lgai-exaone-exaone-3.5-2.4b-instruct.yaml  lgai-exaone-exaone-3.5-32b-instruct.yaml  lgai-exaone-exaone-3.5-7.8b-instruct.yaml  lgai-exaone-exaone-4.0-1.2b.yaml  lgai-exaone-exaone-4.0-1.2b_reasoning.yaml  lgai-exaone-exaone-4.0-32b.yaml  lgai-exaone-exaone-4.0-32b_reasoning.yaml  lgai-exaone-exaone-4.0.1-32b.yaml  lgai-exaone-exaone-4.0.1-32b_reasoning.yaml  naver-hyperclovax-hyperclovax-seed-text-instruct-1.5b.yaml  naver-hyperclovax-hyperclovax-seed-think-14b.yaml  naver-hyperclovax-hyperclovax-seed-think-14b_reasoning.yaml  openai-gpt-oss-120b.yaml  openai-gpt-oss-20b.yaml  qwen-qwen3-14b.yaml  qwen-qwen3-32b.yaml  qwen-qwen3-8b.yaml  skt-a.x-3.1-light.yaml  skt-a.x-3.1.yaml  skt-a.x-4.0-light.yaml  skt-a.x-4.0.yaml  trillionlabs-tri-21b.yaml  trillionlabs-tri-7b.yaml  (+2 more)
configs/vllm_test/: qwen-qwen3-4b-litellm-client.yaml  qwen-qwen3-4b-offline-inference.yaml  qwen-qwen3-4b-openai-client.yaml
docs/: HRET_API.md  README_benchmark_en.md  README_benchmark_ko.md  README_swebench.md  README_swebench_ko.md  README_weave_en.md  README_weave_ko.md
docs/eng/: 01-quick-start.md  02-advanced-backend-usages.md  03-advanced-test-time-usages.md  04-advanced-llm-as-jidge-usage.md  05-contribution-guide.md  05-do-eval-with-benchhub.md  07-contribution-guide.md  08-hret-api-guide.md  (+1 more)
examples/: aime2025_config.yaml  evaluator_config.yaml  hret_config.yaml  hret_examples.py  mlops_integration_example.py  swebench_config.yaml  swebench_example.py
haerae_evaluation_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
llm_eval/: __init__.py  evaluator.py  hret.py  runner.py  standard_weave_runner.py  wandb_controller.py  wandb_singleton.py  weave_evaluator.py
scripts/: blend_run.py  build-docker.sh  llm_inference_adapter.py  push-dockerhub.sh  run_eval.py  test_chat_template.py
scripts2/: blend_run.py  run_eval.py
src/: README.md
src/core/: types.py  (+10 more)
(+272 files in other folders)
