[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inspect-horangi"
version = "0.1.0"
description = "한국어 LLM 벤치마크 평가 프레임워크 (Inspect AI + WandB 통합)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["korean", "llm", "benchmark", "evaluation", "inspect-ai", "wandb", "weave"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "inspect-ai>=0.3.0",
    "inspect-wandb[weave]>=0.1.0",
    "pandas>=2.0.0",
    "jsonlines>=4.0.0",
    "datasets>=2.18.0",
    "anthropic>=0.20.0",
    "openai>=1.0.0",
    "instruction_following_eval @ git+https://github.com/josejg/instruction_following_eval.git",
    "inspect-evals>=0.3.103",
]

[project.scripts]
horangi = "cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]
google = ["google-genai>=0.1.0"]

[project.urls]
Homepage = "https://github.com/yourusername/inspect-horangi"
Documentation = "https://github.com/yourusername/inspect-horangi#readme"
Repository = "https://github.com/yourusername/inspect-horangi"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cli", "src/core", "src/benchmarks", "src/scorers", "src/solvers", "src/data"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
